fixed arrow on mobile & added board button

--- a/css/header.css
+++ b/css/header.css
@@ -5,8 +5,6 @@
   --lightblue: #3ca3cc;
 }
 
-
-
 header {
   position: relative;
   background: url("../img/euroscope.png"), lightgray 0% / cover no-repeat;
@@ -68,6 +66,29 @@ footer p {
   bottom: 40px;
   opacity: 0.6;
   animation: moveArrow 1s infinite;
+}
+
+@media only screen and (max-width: 460px) {
+  .downarrow {
+    width: 25px;
+    position: absolute;
+    bottom: 130px;
+    animation: moveArrowSmall 1s infinite;
+  }
+
+  
+}
+
+@keyframes moveArrowSmall {
+  0% {
+    bottom: 130px;
+  }
+  50% {
+    bottom: 140px;
+  }
+  100% {
+    bottom: 130px;
+  }
 }
 
 @keyframes moveArrow {
