--- a/css/index.css
+++ b/css/index.css
@@ -54,6 +54,7 @@ body {
   color: #fff;
   padding: 10px 35px;
   font-weight: 700;
+  text-align: center;
 }
 
 #buttons {
@@ -214,4 +215,18 @@ p {
   color: var(--darkblue);
   margin-top: 10px;
   margin-bottom: 5px;
+}
+
+#buttons {
+  display: grid;
+  grid-template-columns: auto auto;
+}
+
+@media only screen and (max-width: 460px) {
+  #buttons {
+    grid-template-columns: auto;
+  }
+  #buttons a {
+    margin-top: 10px;
+  }
 }
